added searchable & uneditable endpoints
